update loading picture

--- a/nasa.html
+++ b/nasa.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Loader -->
     <div class="loader hidden">
-        <img src="rocket.svg" alt="Rocket Loading Animation">
+        <img src="cohete.svg" alt="Rocket Loading Animation">
     </div>
     <!-- Container -->
     <section class="container">
@@ -31,7 +31,17 @@
             </span>
         </section>
         <!-- Images Container -->
-        <div class="images-container"></div>
+        <div class="images-container">
+        
+
+                    <small class="text-muted">
+                        <strong>12-12-2020</strong>
+                        <span>Copyright Info</span>
+                    </small>
+
+                </div>
+            </div>
+        </div>
     </section>
     <!-- Save Confirmation -->
     <div class="save-confirmed" hidden>
